--- a/css/plugin.css
+++ b/css/plugin.css
@@ -14,6 +14,13 @@
     height: 100%;
     border: none;
 }
+.responsive-iframe-container--sidebar {
+  min-height: 700px;
+  margin-bottom: 2rem;
+}
+.responsive-iframe-container--sidebar iframe {
+  border: 1px solid #ccc;
+}
 .thickbox__logo .wrap {
   position: relative;
 }
